# moving-chlamydomonas_pub

./: .gitignore  README.md  app.py  clamutils_exp.py  count.py  diagnostica.ipynb  pyproject.toml  requirements.txt  run_pipeline.py
analyses/: __init__.py  common.py  load_results.py  plot_angle_distribution.py  plot_density_vs_distance.py  plot_flux.py  plot_nt_stats.py  plot_omega_distribution.py  plot_theta_distribution.py  plot_theta_y_distribution.py  plot_tumbling.py  run_all_plots.py
clam_pipeline/: _launcher.py  _track_launcher.py  analyze.py  cli.py  io.py  plots.py
tracking_from_video/: .gitignore  run_tracking.sh  tracking_app.py
tracking_from_video/configs/: config_tracking-49-65.json  config_tracking.json  config_tracking_252-256.json  config_tracking_332-336.json
tracking_from_video/notebooks/: interactive_tp.ipynb
tracking_from_video/src/: tracking_algae.py  tracking_core.py
