[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moving-chlamydomonas"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "streamlit",
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "tifffile",
    "trackpy",
    "pims",
    "h5py",
    "av",
    "scikit-image",
]

[project.scripts]
clam-app   = "clam_pipeline._launcher:main"
clam-track = "clam_pipeline._track_launcher:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["clam_pipeline*", "analyses*"]

[tool.setuptools]
py-modules = ["clamutils_exp"]

[tool.setuptools.package-data]
"*" = ["tracking_from_video/configs/config_tracking.json"]
